--- a/tasks/git-clone/git-clone-env-pr.yaml
+++ b/tasks/git-clone/git-clone-env-pr.yaml
@@ -27,7 +27,7 @@ spec:
       export SUBDIR="source"
       echo "git cloning url: $REPO_URL version $PULL_PULL_REF:$(echo $JOB_NAME | tr '[:lower:]' '[:upper:]')-$PULL_NUMBER@$PULL_PULL_SHA to dir: $SUBDIR"
       git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
-      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
+      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@jaraxa.com}
       git config --global credential.helper store
       git clone --recurse-submodules $REPO_URL $SUBDIR
       cd $SUBDIR
