--- a/tasks/git-clone/git-clone.yaml
+++ b/tasks/git-clone/git-clone.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   creationTimestamp: null
-  name: git-clone
+  name: git-clone-pr
 spec:
   stepTemplate:
     env:
@@ -23,13 +23,13 @@ spec:
     name: git-clone
     resources: {}
     script: |
-      #!/bin/sh -x
+      #!/bin/sh
       export SUBDIR="source"
       echo "git cloning url: $REPO_URL version $PULL_BASE_REF@$PULL_BASE_SHA to dir: $SUBDIR"
       git config --global --add user.name ${GIT_AUTHOR_NAME:-jenkins-x-bot}
-      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@jaraxa.com}
-      git config --global credential.helper 
-      git config --global url."https://".insteadOf git://
+      git config --global --add user.email ${GIT_AUTHOR_EMAIL:-jenkins-x@googlegroups.com}
+      git config --global credential.helper store
+      # lets clone the repo
       git clone --recurse-submodules $REPO_URL $SUBDIR
       cd $SUBDIR
       git reset --hard $PULL_BASE_SHA
