--- a/tasks/maven/release.yaml
+++ b/tasks/maven/release.yaml
@@ -57,7 +57,7 @@ spec:
           name: next-version-uat
           script: |
             #!/usr/bin/env sh
-            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT > VERSION                        
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION             
         - image: ghcr.io/jenkins-x/jx-boot:3.9.5
           name: jx-variables
           resources:
@@ -153,20 +153,12 @@ spec:
           script: |
             #!/usr/bin/env sh
             source .jx/variables.sh
-
             if [ -d "charts/$REPO_NAME" ]; then
             jx gitops yset -p version -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
             jx gitops yset -p appVersion -v "$VERSION" -f ./charts/$REPO_NAME/Chart.yaml
             jx gitops yset -p 'image.repository' -v $DOCKER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME -f ./charts/$REPO_NAME/values.yaml
             jx gitops yset -p 'image.tag' -v "$VERSION" -f ./charts/$REPO_NAME/values.yaml;
             else echo no charts; fi
-
-            git add * || true
-            git commit -a -m "chore: Pre-release $VERSION" --allow-empty
-            git tag -fa v$VERSION -m "Prerelease version $VERSION"
-            git push --force origin v$VERSION
-
-            jx changelog create --prerelease --version v${VERSION}
         - image: ghcr.io/jenkins-x/jx-changelog:0.3.0
           name: promote-changelog
           resources: {}
