--- a/tasks/typescript/release.yaml
+++ b/tasks/typescript/release.yaml
@@ -45,6 +45,21 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx-release-version --tag --debug > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
+          name: next-version-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=semantic:strip-prerelease -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
+          name: next-version-package-json
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=from-file:package.json > VERSION
+        - image: ghcr.io/jenkins-x/jx-release-version:2.6.10
+          name: next-version-package-json-uat
+          script: |
+            #!/usr/bin/env sh
+            jx-release-version -debug -next-version=from-file:package.json -output-format "{{.Major}}.{{.Minor}}.{{.Patch}}"-UAT-$BUILD_ID > VERSION            
         - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: jx-variables
           resources:
@@ -55,18 +70,46 @@ spec:
           script: |
             #!/usr/bin/env sh
             jx gitops variables
-        - image: node:14-slim
+        - image: node:18-slim
           name: build-npm-install
           resources: {}
           script: |
             #!/bin/sh
             npm install
-        - image: node:14-slim
+        - image: node:18-slim
           name: build-npm-test
           resources: {}
           script: |
             #!/bin/sh
             CI=true DISPLAY=:99 npm test
+        - image: node:18-slim
+          name: build-npm-version
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            npm --no-git-tag-version version $VERSION --allow-same-version
+        - image: node:18-slim
+          name: build-npm-publish
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            npm publish
+        - image: sonarsource/sonar-scanner-cli:4.8.0
+          name: sonar-code-analisys
+          resources: {}
+          script: |
+            #!/bin/bash
+            source .jx/variables.sh
+            export SONAR_TOKEN=$SONAR_TOKEN
+            sonar-scanner \
+              -Dsonar.projectKey=$SONAR_PROJECT_KEY \
+              -Dsonar.exclusions=$SONAR_EXCLUSIONS \
+              -Dsonar.sourceEncoding=UTF-8 \
+              -Dsonar.sources=. \
+              -Dsonar.projectVersion=$VERSION \
+              -Dsonar.host.url=$SONAR_URL            
         - image: ghcr.io/jenkins-x/jx-registry:0.1.10
           name: check-registry
           resources: {}
@@ -86,7 +129,7 @@ spec:
               --context=/workspace/source \
               --dockerfile=${DOCKERFILE_PATH:-Dockerfile} \
               --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:$VERSION \
-              --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest 
+              --destination=$PUSH_CONTAINER_REGISTRY/$DOCKER_REGISTRY_ORG/$APP_NAME:latest
         - image: ghcr.io/jenkins-x/jx-boot:3.10.124
           name: promote-changelog-uat
           resources: {}
