--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -30,7 +30,11 @@ spec:
       git log $(git describe --abbrev=0 --tags 2> /dev/null || git rev-list --max-parents=0 HEAD)..HEAD | \
         grep -oE "$JIRA_PROJECT-[[:digit:]]{1,}" | sort | uniq | \
         sed 's/^\|$/"/g' | paste -sd , - | awk '{print ""$0}' | export RELATED_JIRA_ISSUES
-  - image: docker.io/curlimages/curl:7.72.0
+  - envFrom:
+    - secretRef:
+        name: jx-boot-job-env-vars
+        optional: true
+    image: docker.io/curlimages/curl:7.72.0
     name: invoke-jira-webhook
     resources: {}
     script: |
@@ -43,9 +47,8 @@ spec:
           "issues": [
             $RELATED_JIRA_ISSUES
           ]
-        }'
+        }' \
         $JIRA_WEBHOOK_URL
-    workingDir: /workspace
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
     mountPath: /workspace
