--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -27,10 +27,9 @@ spec:
     resources: {}
     script: |
       #!/usr/bin/env sh 
-      RELATED_JIRA_ISSUES=$(git log $(git describe --abbrev=0 --tags 2> /dev/null || git rev-list --max-parents=0 HEAD) | \
+      git log $(git describe --abbrev=0 --tags 2> /dev/null || git rev-list --max-parents=0 HEAD) | \
         grep -oE "$JIRA_PROJECT-[[:digit:]]{1,}" | sort | uniq | \
-        paste -sd , - | awk '{print "\"" $0 "\""}')
-      echo JIRA Tickets are: $RELATED_JIRA_ISSUES
+        paste -sd , - | awk '{print "\"" $0 "\""}' > JIRA_ISSUES
   - envFrom:
     - secretRef:
         name: jx-boot-job-env-vars
@@ -40,6 +39,8 @@ spec:
     resources: {}
     script: |
       #!/bin/sh
+      export RELATED_JIRA_ISSUES=$(cat ./JIRA_ISSUES)
+      echo JIRA Tickets are: $RELATED_JIRA_ISSUES
       curl -s -XPOST -H "Content-Type: application/json" -d '{"data": {"version": "$VERSION","projectname": "$JIRA_PROJECT"}, "issues": [$RELATED_JIRA_ISSUES]}' $JIRA_WEBHOOK_URL
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
