--- a/tasks/jira/release.yaml
+++ b/tasks/jira/release.yaml
@@ -42,6 +42,7 @@ spec:
       export RELATED_JIRA_ISSUES=$(cat ./JIRA_ISSUES)
       echo JIRA Tickets are: $RELATED_JIRA_ISSUES
       curl -s -XPOST -H "Content-Type: application/json" -d '{"data": {"version": "$VERSION","projectname": "$JIRA_PROJECT"}, "issues": [$RELATED_JIRA_ISSUES]}' $JIRA_WEBHOOK_URL
+      sleep 6000
   workspaces:
   - description: The git repo will be cloned onto the volume backing this workspace
     mountPath: /workspace/source
